@@ -1,5 +1,6 @@
 Current
 
+Fixed: GITHUB-108: Dynamic parameters with "=" in them are not parsed correctly (szhem)
 Fixed: Commands with same prefix as options were not working properly.
 Fixed: GITHUB-97: Required password always complains that it is not specified (timoteoponce)
 
